gccida/g2/expand_mult
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2809:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_mult( machine_mode mode, rtx op0, rtx op1, rtx target, int unsignedp) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2829:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2831:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v28; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2836:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2842:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2847:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2851:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2855:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2858:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v55; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2861:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v58; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2862:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v59; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2882:13: error: expected expression
expand_mult::$15A4585A4BD47F0CBB7A268DC7D7DA95 variant; // [rsp+2Ch] [rbp-2DCh] 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2890:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)op1 + 2)] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2919:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v10] == MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2963:1: error: use of undeclared identifier 'variant'
variant = basic_variant; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2963:11: error: use of undeclared identifier 'basic_variant'
variant = basic_variant; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2972:1: error: use of undeclared identifier 'variant'
variant = basic_variant; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2972:11: error: use of undeclared identifier 'basic_variant'
variant = basic_variant; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/expmed.c:2976:1: error: use of undeclared identifier 'variant'
variant = negate_variant; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_mult/src/obj/expmed.o] Error 1
